signUP.js started

--- a/login.html
+++ b/login.html
@@ -11,10 +11,13 @@
     <link rel="stylesheet" href="login_assets/login_css/generalForm.css">
     <link rel="stylesheet" href="login_assets/login_css/fonts.css">
     <link rel="stylesheet" href="login_assets/login_css/login.css">
-    <script src="js/login.js"></script>
+    <script src="js/mini_backend.js"></script>
+    <script src="js/load.js"></script>
+    
+    
 </head>
 
-<body>
+<body onload="init()">
 
     <nav class="navbar">
         <div class="logo">
