--- a/login_assets/signUp.html
+++ b/login_assets/signUp.html
@@ -14,34 +14,12 @@
     <link rel="stylesheet" href="login_css/signUp.css">
 
     <script src="js/mini_backend.js"></script>
-    <script>
-        setURL('https://gruppe-319.developerakademie.net/smallest_backend_ever')
-
-        let users = []
-
-        function save() {
-            let name = document.querySelector('#name').value
-            let email = document.querySelector('#e-mail').value
-            let password = document.querySelector('#password').value
-
-            let user = {
-                'name': name,
-                'email': email,
-                'password': password
-            }
-
-            addUser(user)
-            window.location.href = 'login.html'
-        }
-
-        function addUser(user) {
-            users.push(user)
-            backend.setItem('users', JSON.stringify(users));
-        }
-    </script>
+    <script src="js/load.js"></script>
+    <script src="js/sign_up.js"></script>
+    
 </head>
 
-<body>
+<body onload="init()">
     <nav class="navbar">
         <div class="logo">
             <img src="../kanban_img/login_icons/join_white.png">
@@ -57,7 +35,7 @@
         <div class="form-inner-container">
             <h1 class="form-headline">Sign up</h1>
             <div class="blue-bottom"></div>
-            <form onsubmit="save();return false" class="form">
+            <form onsubmit="signUp();return false" class="form">
 
                 <div class="login-data">
                     <input id="name" type="text" placeholder="Name">
