--- a/login_assets/signUp.html
+++ b/login_assets/signUp.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="login_css/login.css">
     <link rel="stylesheet" href="login_css/signUp.css">
 
-    <script src="js/mini_backend.js"></script>
-    <script src="js/load.js"></script>
-    <script src="js/sign_up.js"></script>
+    <script src="../js/mini_backend.js"></script>
+    <script src="../js/load.js"></script>
+    <script src="../js/sign_up.js"></script>
     
 </head>
 
@@ -35,7 +35,7 @@
         <div class="form-inner-container">
             <h1 class="form-headline">Sign up</h1>
             <div class="blue-bottom"></div>
-            <form onsubmit="signUp();return false" class="form">
+            <form onsubmit="signUp(); return false" class="form">
 
                 <div class="login-data">
                     <input id="name" type="text" placeholder="Name">
