--- a/addTask.html
+++ b/addTask.html
@@ -18,7 +18,7 @@
 
     <script src="js/mini_backend.js"></script>
     <script src="js/load.js" defer></script>
-    <script src="js/login.js" defer></script>
+    <script src="js/task.js" defer></script>
 
 </head>
 
@@ -64,16 +64,24 @@
             <div class="add-task-container">
                 <div class="task-form-left">
                     <form class="task-form">
-                        <input class="input-title" type="text" placeholder="Enter a title">
+                        <input id="input-title" class="input-title" type="text" placeholder="Enter a title">
 
                         <div class="contacts-container">
-                            <select name="contacts" id="contacts">
-                                <option value="">select contacts to assign</option>
-                                <option value="">contact1</option>
-                                <option value="">contac2</option>
-                                <option value="">contact2</option>
+                            <div class="add-option d-none">
+                                <input id="add-contact-input" class="add-option-input" type="text" placeholder="New category name">
+                                <div class="add-option-btn-container">
+                                    <img onclick="closeAddContact()" class="close-x-blue-btn" src="kanban_img/close_icons/close_x_blue.png">
+                                    <img onclick="addNewContactOption()" class="blue-clear-btn" src="kanban_img/clear_icons/blue_clear.png">
+                                </div>
+                            </div>
+
+                            <select name="contacts" id="contacts" onchange="showAddContact(value)">
+                                <option value="select contacts">select contacts to assign</option>
+                                <option value="You">You</option>
+                                <option value="Maximilian Vogel">Maximilian Vogel</option>
+                                <option value="Invite new contact">Invite new contact</option>
                             </select>
-                            <img class="arrow-select" src="kanban_img/arrow_icons/arrow_select.png" />
+                            <img id="arrow-select-contact" class="arrow-select" src="kanban_img/arrow_icons/arrow_select.png" />
                         </div>
 
                         <div class="due-date-container">
@@ -102,7 +110,7 @@
                         </div>
 
                         <div class="category-container">
-                            <label class="category-label" for="category">Subtask<input id="category" placeholder="Add new subtask" type="text"></label>
+                            <label class="category-label" for="category">Subtask<input id="subtask-category" placeholder="Add new subtask" type="text"></label>
                             <label for="subtask"><input type="checkbox" id="subtask"><span class="category-span">Subtask</span></label>
                         </div>
                     </form>
