--- a/board.html
+++ b/board.html
@@ -13,31 +13,16 @@
     <link rel="stylesheet" href="kanban_assets/kanban_css/index.css">
     <link rel="stylesheet" href="kanban_assets/kanban_css/board.css">
 
+    <link rel="stylesheet" href="kanban_assets/kanban_css/custom-select.css">
+    <link rel="stylesheet" href="kanban_assets/kanban_css/task.css">
     <link rel="stylesheet" href="kanban_assets/kanban_css/task-info.css">
     <link rel="stylesheet" href="kanban_assets/kanban_css/edit_task.css">
 
 
     <script src="js/render.js" defer></script>
-    <script src="js/mini_backend.js" defer></script>
-
-    <script>
-        let users = [];
-
-        setURL('https://gruppe-319.developerakademie.net/smallest_backend_ever')
-
-        async function addUser() {
-            users.push('John');
-            await backend.setItem('users', JSON.stringify(users));
-        }
-
-        async function initDownload() {
-            await downloadFromServer();
-            users = JSON.parse(backend.getItem("users")) || [];
-            console.log(users)
-        }
-    </script>
-
-    <script src="js/login.js" defer></script>
+    <script src="js/mini_backend.js"></script>
+    <script src="js/load.js" defer></script>
+    <script src="js/custom-select.js" defer></script>
 
 </head>
 
@@ -79,17 +64,17 @@
                         <input placeholder="Find task" type="text" class="input">
                         <img class="search-img" src="kanban_img/search_icons/search.png">
                     </div>
-                    <button class="add-btn"><span class="white-text">Add Task</span><img class="add-img" src="kanban_img/plus_icons/plus_white.png"></button>
+                    <button onclick="renderSmallAddTask()" class="add-btn"><span class="white-text">Add Task</span><img class="add-img" src="kanban_img/plus_icons/plus_white.png"></button>
                 </div>
 
                 <div class="board-task-container">
                     <div class="board-to-do width-25">
                         <div class="flex">
                             <h4 class="board-task-title">To do</h4>
-                            <img class="board-task-img" src="kanban_img/plus_icons/plus_button.png">
+                            <img onclick="renderSmallAddTask()" class="board-task-img" src="kanban_img/plus_icons/plus_button.png">
                         </div>
 
-                        <div class="added-task">
+                        <div onclick="renderBoardTaskInfo()" class="added-task">
                             <span class="task-topic white-text">Design</span>
                             <h4 class="task-headline blue-text">Redesign Website</h4>
                             <span class="added-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</span>
@@ -106,10 +91,10 @@
                     <div class="board-in-progress width-25">
                         <div class="flex">
                             <h4 class="board-task-title">In Progress</h4>
-                            <img class="board-task-img" src="kanban_img/plus_icons/plus_button.png">
+                            <img onclick="renderSmallAddTask()" class="board-task-img" src="kanban_img/plus_icons/plus_button.png">
                         </div>
 
-                        <div class="added-task">
+                        <div onclick="renderBoardTaskInfo()" class="added-task">
                             <span class="task-topic white-text">Design</span>
                             <h4 class="task-headline blue-text">Redesign Website</h4>
                             <span class="added-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</span>
@@ -122,7 +107,7 @@
                             </div>
                         </div>
 
-                        <div class="added-task">
+                        <div onclick="renderBoardTaskInfo()" class="added-task">
                             <span class="task-topic white-text">Design</span>
                             <h4 class="task-headline blue-text">Redesign Website</h4>
                             <span class="added-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</span>
@@ -139,10 +124,10 @@
                     <div class="board-await-feedback width-25">
                         <div class="flex">
                             <h4 class="board-task-title">Await Feedback</h4>
-                            <img class="board-task-img" src="kanban_img/plus_icons/plus_button.png">
+                            <img onclick="renderSmallAddTask()" class="board-task-img" src="kanban_img/plus_icons/plus_button.png">
                         </div>
 
-                        <div class="added-task">
+                        <div onclick="renderBoardTaskInfo()" class="added-task">
                             <span class="task-topic white-text">Design</span>
                             <h4 class="task-headline blue-text">Redesign Website</h4>
                             <span class="added-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</span>
@@ -155,7 +140,7 @@
                             </div>
                         </div>
 
-                        <div class="added-task">
+                        <div onclick="renderBoardTaskInfo()" class="added-task">
                             <span class="task-topic white-text">Design</span>
                             <h4 class="task-headline blue-text">Redesign Website</h4>
                             <span class="added-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</span>
@@ -171,10 +156,10 @@
                     <div class="board-done width-25">
                         <div class="flex">
                             <h4 class="board-task-title">Done</h4>
-                            <img class="board-task-img" src="kanban_img/plus_icons/plus_button.png">
+                            <img onclick="renderSmallAddTask()" class="board-task-img" src="kanban_img/plus_icons/plus_button.png">
                         </div>
 
-                        <div class="added-task">
+                        <div onclick="renderBoardTaskInfo()" class="added-task">
                             <span class="task-topic white-text">Design</span>
                             <h4 class="task-headline blue-text">Redesign Website</h4>
                             <span class="added-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</span>
