--- a/addTask.html
+++ b/addTask.html
@@ -131,9 +131,9 @@
                         </div>
 
                         <div class="priority-btn-container">
-                            <button class="urgent-btn">Urgent <img class="priority-urgent-img" src="kanban_img/priority_icons/urgent-red.png"></button>
-                            <button class="medium-btn">Medium <img  class="priority-urgent-img" src="kanban_img/priority_icons/middle-urgent-orange.png"></button>
-                            <button class="non-urgent-btn">Low <img class="priority-urgent-img" src="kanban_img/priority_icons/non-urgent-green.png"></button>
+                            <a id="urgent-btn" class="urgent-btn priroty" onclick="setPriotity(id)">Urgent <img id="urgent-btn-priroty-img" class="priority-urgent-img" src="kanban_img/priority_icons/urgent-red.png"></a>
+                            <a id="medium-btn" class="medium-btn priroty" onclick="setPriotity(id)">Medium <img  id="medium-btn-priroty-img" class="priority-urgent-img" src="kanban_img/priority_icons/middle-urgent-orange.png"></a>
+                            <a id="non-urgent-btn" class="non-urgent-btn priroty" onclick="setPriotity(id)">Low <img id="non-urgent-btn-priroty-img" class="priority-urgent-img" src="kanban_img/priority_icons/non-urgent-green.png"></a>
                         </div>
                         <div class="description-container">
                             <span>Description</span>
