add task id implemented

--- a/contacts.html
+++ b/contacts.html
@@ -27,7 +27,7 @@
     
 </head>
 
-<body onload="renderContactBook()">
+<body onload="renderContactBook(), init()">
     <nav class="kanban-navbar">
         <div class="inner-container">
             <img class="logo" src="kanban_img/login_icons/join_white.png">
