--- a/summary.html
+++ b/summary.html
@@ -19,7 +19,7 @@
     
 </head>
 
-<body onload="loadLoggedInUser()">
+<body onload="loadLoggedInUser(), init()">
     <nav class="kanban-navbar">
         <div class="inner-container">
             <img class="logo" src="kanban_img/login_icons/join_white.png">
