--- a/board.html
+++ b/board.html
@@ -94,7 +94,7 @@
                     </div>
 
                     
-                    <div class="board-in-progress width-25 test">
+                    <div id="InProgress-container" class="board-in-progress width-25">
                         <div class="flex">
                             <h4 class="board-task-title">In Progress</h4>
                             <img onclick="renderSmallAddTask()" class="board-task-img" src="kanban_img/plus_icons/plus_button.png">
